# hyper_label_model

./: MANIFEST.in  README.md  checkpoint.pt  data.py  environment.yml  loss.py  model.py  pyproject.toml  readme.md  train.py
.github/workflows/: python-publish.yml
experiments/: adv_exp.py  adv_plot.py  endmodel_exp.py  performance_exp.py  semisupervised_exp.py  semisupervised_plot.py
experiments/baselines/: baselines.py  data_programming.py  ebcc.py
experiments/baselines/fast_dawid_skene/: __init__.py  algorithms.py  loader.py  main.py  utils.py
experiments/baselines/fast_dawid_skene/tests/: __init__.py  test_loader.py
experiments/baselines/nplm/: labelmodel.py  noisy_partial.py
src/hyperlm/: __init__.py  hyper_label_model.py  loss.py
